# BOAD

./: README.md  pyproject.toml  requirements.txt
configs/: template_full.yaml
scripts/: plot_results.py  run_benchmark.sh  run_experiment.py
src/bo_core/: __init__.py  config_manager.py  optimizer.py  test_functions.py  utils.py
src/bo_core/components/: __init__.py  acquisition.py  decomposition.py  visualizer.py
src/bo_core/models/: __init__.py  additive_gp.py
src/bo_core/tasks/: __init__.py  base.py  lassobench.py  mip.py  nas.py  parameter.py  rover.py  synthetic.py
